# magic-scrape-along

./: .gitignore  magic-scrape.cabal
app/: Main.hs
src/: Example.hs  Worker.hs
