cabal-version: 3.0
name:          magic-scrape
version:       0.0.0.0
license:       MIT
author:        Peter Murphy
maintainer:    peter.murphy@well.co
category:      Testing
build-type:    Simple

-- Extra source files to be distributed with the package, such as examples, or a tutorial module.
-- extra-source-files:

common warnings
  ghc-options: -Wall

executable magic-scrape
  import:           warnings
  main-is:          Main.hs

  -- Modules included in this executable, other than Main.
  other-modules:
    Example
    Worker

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:

  -- Other library packages from which modules are imported.
  build-depends:
    , aeson
    , ansi-terminal
    , async
    , base
    , bytestring
    , containers
    , deriving-aeson
    , directory
    , filepath
    , generic-lens
    , http-client
    , http-client-tls
    , http-types
    , lens
    , megaparsec
    , mtl
    , pipes
    , pipes-concurrency
    , pipes-safe
    , scalpel
    , text
    , time
    , unliftio

  -- Directories containing source files.
  hs-source-dirs:   app src

  -- Base language which the package is written in.
  default-language: Haskell2010
